# validation/dataValidation.js
@@ -1,19 +1,20 @@
 const Joi = require('joi');
 
-const userValidationSchema = Joi.object({
-  email: Joi.string().email().required(),
-  username: Joi.string().alphanum().min(3).max(30).required(),
-  name: Joi.string().min(1).max(100).required(),
-  ipaddress: Joi.string().ip({ version: ['ipv4'] }).required()
+const gunValidationSchema = Joi.object({
+    model: Joi.string().min(1).max(100).required(),
+    caliber: Joi.string().min(1).max(50).required(),
+    magazineCapacity: Joi.number().integer().positive().required(),
+    weight: Joi.string().min(1).max(50).required(),
+    barrelLength: Joi.string().min(1).max(50).required(),
+    sights: Joi.string().min(1).max(50).required(),
+    action: Joi.string().min(1).max(50).required()
 });
 
-module.exports = { userValidationSchema };
+const suppressorValidationSchema = Joi.object({
+    name: Joi.string().min(1).max(100).required(),
+    caliber: Joi.string().min(1).max(100).required(),
+    weight_oz: Joi.number().positive().required(),
+    material: Joi.string().min(1).max(50).required()
+});
 
-// const userValidationSchema = Joi.object({
-//   email: Joi.string().email().required(),
-//   username: Joi.string().alphanum().min(3).max(30).required(),
-//   name: Joi.string().min(1).max(100).required(),
-//   ipaddress: Joi.string().ip({ version: ['ipv4'] }).required()
-// });
-
-// module.exports = { userValidationSchema };
+module.exports = { gunValidationSchema, suppressorValidationSchema };
